Page MenuHome GnuPG

gpg: Report details about failed symmetric decrypt with ERROR status
Closed, ResolvedPublic

Description

To be able to display a "(Most likely) You entered a bad passphrase" error in Kleopatra we/gpgme needs to know

  1. that symmetric decryption was attempted
  2. a bad symmetric passphrase was entered
  3. that symmetric decryption failed because of other reasons than a bad passphrase, e.g. if the symmetrically encrypted session key block is corrupt